--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>test jqueyr board</title>
   <link rel="stylesheet" href="include/css/ui-lightness/jquery-ui.custom.css">
+  <link rel="stylesheet" href="board.jquery.css">
 </head>
 <body>
 <div id="board-container">
