close #14 : Delete a line

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </div>
 <script id="cell-template" type="text/x-handlebars-template">
-  	<li class="board-row"><span class="editable">{{name}}</span></li>
+  	<li class="board-row"><span class="editable">{{name}}</span>{{removeRow title="Supprimer la ligne"}}</li>
 </script>
 <script id="rows-template" type="text/x-handlebars-template">
   	<ul class="rows-wrapper">
